@@ -49,6 +49,12 @@
             <artifactId>aws-crt-client</artifactId>
             <version>2.21.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.kohlschutter.junixsocket</groupId>
+            <artifactId>junixsocket-core</artifactId>
+            <version>2.8.1</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
@@ -134,6 +140,32 @@
                                         <argument>-Xmx12G</argument>
                                         <argument>-ea</argument>
                                         <argument>io.github.jbellis.jvector.example.Bench</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>ipcserve</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>ipcserve-1core</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</argument>
+                                        <argument>-Djvector.physical_core_count=1</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
